Revision history for Test::Count

0.0102    Tue Sep 19 14:40:34 IDT 2006
          - Now generating a pass-through Makefile.PL.

0.0101    Thu Sep 14 17:03:00 IDT 2006
          - Added an acknowledgement for Parse::RecDescent.
          - Converted Build.PL to Test::Run::Builder.
          - Added more meaningful documentation.

0.01      Sat Aug 19 17:57:31 IDT 2006
          - First version
          - starting from the skeleton of Module-Starter.
          - Implemented most of the desired functionality. (except various
          nice to have customizations.)