@@ -52,11 +52,24 @@ sub do_test_run_tests
 
     my $test_run =
         Test::Run::CmdLine::Iface->new(
-            'test_files' => [glob("t/*.t")],
+            {
+                'test_files' => [glob("t/*.t")],
+            }   
             # 'backend_params' => $self->_get_backend_params(),
         );
 
     return $test_run->run();
+}
+
+sub ACTION_tags
+{
+    return 
+        system(qw(
+            ctags -f tags --recurse --totals
+    		--exclude=blib/ --exclude=t/lib
+    		--exclude=.svn --exclude='*~'
+    		--languages=Perl --langmap=Perl:+.t
+    ));
 }
 
 1;
